// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should render 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb"
  >
    <ul />
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should render list of items 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb"
  >
    <ul>
      <li
        class=""
      >
        <a>
          Home
        </a>
      </li>
      <li
        class=""
      >
        <a>
          Section
        </a>
      </li>
      <li
        class="is-active"
      >
        <a>
          Details
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should use inline style and custom size 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb is-large"
    style="margin-top: 10px;"
  >
    <ul>
      <li
        class=""
      >
        <a>
          Home
        </a>
      </li>
      <li
        class=""
      >
        <a>
          Section
        </a>
      </li>
      <li
        class="is-active"
      >
        <a>
          Details
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should use separator arrow 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb has-arrow-separator"
  >
    <ul>
      <li
        class=""
      >
        <a>
          Storybook
        </a>
      </li>
      <li
        class=""
      >
        <a>
          Breadcrumb
        </a>
      </li>
      <li
        class="is-active"
      >
        <a>
          Breadcrumb Types
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should use separator bullet 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb has-bullet-separator"
  >
    <ul>
      <li
        class=""
      >
        <a>
          Storybook
        </a>
      </li>
      <li
        class=""
      >
        <a>
          Breadcrumb
        </a>
      </li>
      <li
        class="is-active"
      >
        <a>
          Breadcrumb Types
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should use separator dot 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb has-dot-separator"
  >
    <ul>
      <li
        class=""
      >
        <a>
          Storybook
        </a>
      </li>
      <li
        class=""
      >
        <a>
          Breadcrumb
        </a>
      </li>
      <li
        class="is-active"
      >
        <a>
          Breadcrumb Types
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should use separator succeeds 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb has-succeeds-separator"
  >
    <ul>
      <li
        class=""
      >
        <a>
          Storybook
        </a>
      </li>
      <li
        class=""
      >
        <a>
          Breadcrumb
        </a>
      </li>
      <li
        class="is-active"
      >
        <a>
          Breadcrumb Types
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
